# prelegal

./: .gitignore  CLAUDE.md  LICENSE  README.md  REVIEW.md  catalog.json
.claude/skills/groq-inference/: SKILL.md
backend/: README.md  pyproject.toml
backend/app/: auth.py  chat.py  config.py  db.py  main.py  models.py  templates.py
backend/tests/: conftest.py  test_api.py  test_chat.py  test_templates.py
frontend/: CLAUDE.md  README.md  TESTING.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.mts
frontend/app/: AuthGuard.test.tsx  AuthGuard.tsx  globals.css  layout.tsx  page.tsx
frontend/app/create/: page.tsx
frontend/app/login/: page.test.tsx  page.tsx
frontend/app/saved/: page.tsx
frontend/app/signup/: page.test.tsx  page.tsx
frontend/components/: ChatPanel.test.tsx  ChatPanel.tsx  Dialog.test.tsx  Dialog.tsx  DownloadButton.tsx  MNDADownloadButton.test.tsx  MNDADownloadButton.tsx  MNDAForm.test.tsx  MNDAForm.tsx  MNDAHtmlPreview.test.tsx  MNDAHtmlPreview.tsx  MNDAPdfDocument.tsx  MNDAPdfViewer.tsx  TemplatePdfDocument.tsx  TemplatePreview.test.tsx  TemplatePreview.tsx
frontend/e2e/: document.spec.ts  mnda.spec.ts  multi-user.spec.ts
frontend/lib/: api.ts  auth.test.ts  auth.ts  chat.test.ts  chat.ts  documents.test.ts  documents.ts  mnda.test.ts  mnda.ts  pdf.tsx  template.test.ts  template.ts
scripts/: start-dev.ps1  start-linux.sh  start-windows.ps1  stop-dev.ps1  stop-mac.sh  stop-windows.ps1
templates/: LICENSE.txt
