[project]
name = "prelegal-backend"
version = "0.1.0"
description = "Prelegal backend: dummy-login API and static frontend serving."
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.137.1",
    "litellm>=1.89.1",
    "sqlalchemy>=2.0.51",
    "tenacity>=9.1.4",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
